--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha test --exit",
-    "start": "node server/index.js"
+    "start": "nodemon server/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "chai": "^4.0.2",
     "chai-http": "^4.3.0",
     "express": "^4.16.4",
-    "mocha": "^6.1.4"
+    "mocha": "^6.1.4",
+    "nodemon": "^1.19.0"
   }
 }
